--- a/about_us.html
+++ b/about_us.html
@@ -134,13 +134,13 @@
 
                 <div class="col-md-6 margin">
                     <h2>
-                        Over 10,000 songs from over 150 members and still growing!<br><br />
+                        Over 10,000 songs from over 150 members and we continue to grow.<br><br />
                     </h2>
                     <p>
-                        We Did It Global was formed in 2021 as a new age independent music publishing administration. We are committed to protecting, preserving and rewarding our member’s creations worldwide by safeguarding their copyrights and collecting the royalties they are rightfully owed.<br>
+                        We Did It Global was formed in 2021 as a new age independent music publishing administration. We are committed to protecting, preserving and rewarding our members' creations worldwide, by safeguarding their copyrights and collecting the royalties they rightfully own.<br>
 
                         <br><span>Become part of our growing community under the next level Publishing & Administration culture</span><br><br>
-                        Our friendly and knowledgeable team are dedicated to ensuring our members get the most out of their creations. We are always ready to offer guidance to our members to help elevate their careers and give them the platform to create works of art that will stand the test of time.
+                        Our friendly and knowledgeable team is dedicated to ensure our members get the most out of their creations. We are always ready to offer guidance to our members to help elevate their careers and give them the platform to create works of art that will stand the test of time.
 
                     </p>
                 </div>
@@ -171,13 +171,12 @@
                 </div>
 
                 <div class="col-md-6 margin">
-                    <h4>We are the world's 1st publishing Administrator to pay Royalties in advance.
+                    <h4>WDIG is the world's 1st publishing Administrator to pay Royalties in advance.
                     </h4>
 
                     <br>
 
-
-                    <h4>We are the 1st publishing Administrator in Sri Lanka to register our songwriters globally.
+                    <h4>We are the Sri Lanka's 1st publishing Administrator in  to register songwriters globally.
                     </h4>
                     <br>
 
@@ -186,7 +185,7 @@
                         <span>Why choose "We Did It Global"?
                         </span>
                         <br><br>
-                        We Did It Global as an independent music publisher manages and protects the largest catalogue of iconic Sri Lankan songs written by legends such as Gunadasa Kapuge, Karunarathna Abeysekera, Sarath Dassanayake, Lucian Bulathsinghala and more. Protecting and rewarding artists through proper licensing and copyright law is important in our journey to build a sustainable environment for making art. We are an equal opportunity publisher and welcome all creators whether experienced veterans or newcomers.
+                        We Did It Global as an independent music publisher manages and protects the largest catalogue of iconic Sri Lankan songs, written by legends such as Gunadasa Kapuge, Karunarathna Abeysekera, Sarath Dassanayake, Lucian Bulathsinghala and many more. Protecting and rewarding artists through proper licensing and copyright law is important in our journey, to build a sustainable environment to create art. We are an equal opportunity publisher and welcome all creators whether experienced veterans or newcomers.
 
                     </p>
                 </div>
@@ -249,7 +248,7 @@
                         <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f"
                                 target="_blank"></a></i>
                         <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-                        <i> <a href="#" class="fab fa-pinterest -f" target="_blank"></a></i>
+                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
                         <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                                 target="_blank"></a></i>
                     </div>
