--- a/frequently_asked_questions.html
+++ b/frequently_asked_questions.html
@@ -338,7 +338,7 @@
           <div class="social-icons">
             <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f" target="_blank"></a></i>
             <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-            <i> <a href="#" class="fab fa-pinterest -f" target="_blank"></a></i>
+            <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
             <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                 target="_blank"></a></i>
           </div>
