--- a/our_team_australia.html
+++ b/our_team_australia.html
@@ -253,7 +253,21 @@
                         </div>
                     </div>
 
+                    <div class="item">
+                        <image src="Images\AmilaWijewardhana.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Amila Wijewardena</h5>
+                                <p>Manager - Administration</p>
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="item">
                         <image src="Images\w1.png" alt="team" />
@@ -271,21 +285,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
-                        <image src="Images\AmilaWijewardhana.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Amila Wijewardena</h5>
-                                <p>Manager - Administration</p>
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
             </div>
@@ -335,7 +335,7 @@
                         <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f"
                                 target="_blank"></a></i>
                         <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-                        <i> <a href="#" class="fab fa-pinterest -f" target="_blank"></a></i>
+                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
                         <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                                 target="_blank"></a></i>
                     </div>
