--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -161,7 +161,8 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href="https://www.linkedin.com/in/harsha-bulathsinghala-90991883/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/harsha-bulathsinghala-90991883/"
+                                            target="_blank"><span class="fa fa-linkedin"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +179,8 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href="https://www.linkedin.com/in/ranga-dasanayake-625b3032/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/ranga-dasanayake-625b3032/"
+                                            target="_blank"><span class="fa fa-linkedin"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +197,8 @@
                                     <div class="social-links">
                                         <a href=""><span class="fa fa-facebook"></span></a>
                                         <a href=""><span class="fa fa-twitter"></span></a>
-                                        <a href="https://www.linkedin.com/in/chathura-m-434340182/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                                        <a href="https://www.linkedin.com/in/chathura-m-434340182/"
+                                            target="_blank"><span class="fa fa-linkedin"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -218,6 +221,24 @@
             </div>
             <div class="row">
                 <div class="team-items">
+
+                    <div class="item">
+                        <image src="Images\Dulanjali.jpg" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Dulanjali Abeykoon</h5>
+                                <p>Country <br>Manager</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <div class="item">
                         <image src="Images\m1.png" alt="team" />
                         <div class="inner">
@@ -233,6 +254,9 @@
                             </div>
                         </div>
                     </div>
+
+
+
 
 
                     <div class="item">
@@ -277,7 +301,8 @@
                                 <div class="social-links">
                                     <a href=""><span class="fa fa-facebook"></span></a>
                                     <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href="https://www.linkedin.com/in/chanodya-indusara-914871215/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                                    <a href="https://www.linkedin.com/in/chanodya-indusara-914871215/"
+                                        target="_blank"><span class="fa fa-linkedin"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -310,7 +335,8 @@
                                 <div class="social-links">
                                     <a href=""><span class="fa fa-facebook"></span></a>
                                     <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href="https://www.linkedin.com/in/ishani-jayathilake-b272001b4/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                                    <a href="https://www.linkedin.com/in/ishani-jayathilake-b272001b4/"
+                                        target="_blank"><span class="fa fa-linkedin"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -332,6 +358,7 @@
                         </div>
                     </div>
 
+
                 </div>
             </div>
         </div>
@@ -346,6 +373,91 @@
             </div>
             <div class="row">
                 <div class="team-items">
+
+
+
+                    <div class="item">
+                        <image src="Images\m6.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Bandula Lakshman Jayasinghe </h5>
+                                <p>Committee Member</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <image src="Images\m7.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Dias Gunaratne</h5>
+                                <p>Committee Member</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <image src="Images\m12.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Dileepa Abeysekera </h5>
+                                <p>Committee Member</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <image src="Images\m13.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Indika Pradeep </h5>
+                                <p>Committee Member</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="item">
+                        <image src="Images\m10.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Jagath Wickramasinghe</h5>
+                                <p>Committee Member</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <div class="item">
                         <image src="Images\m3.png" alt="team" />
                         <div class="inner">
@@ -362,6 +474,22 @@
                         </div>
                     </div>
 
+
+                    <div class="item">
+                        <image src="Images\m8.png" alt="team" />
+                        <div class="inner">
+                            <div class="info">
+                                <h5>Mervyn Joseph</h5>
+                                <p>Committee Member</p>
+
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 
                     <div class="item">
@@ -382,6 +510,7 @@
 
 
 
+
                     <div class="item">
                         <image src="Images\m5.png" alt="team" />
                         <div class="inner">
@@ -399,90 +528,10 @@
                     </div>
 
                     <div class="item">
-                        <image src="Images\m12.png" alt="team" />
+                        <image src="Images\m11.png" alt="team" />
                         <div class="inner">
                             <div class="info">
-                                <h5>Jagadeesh Dileepa Abeysekera </h5>
-                                <p>Committee Member</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <image src="Images\m6.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Bandula Lakshman Jayasinghe </h5>
-                                <p>Committee Member</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <image src="Images\m13.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Somapala Indika Pradeep </h5>
-                                <p>Committee Member</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <image src="Images\m7.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Aladinge Dias Gunaratne</h5>
-                                <p>Committee Member</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <image src="Images\m8.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Biyanwilage Don Mervyn Joseph</h5>
-                                <p>Committee Member</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <image src="Images\m10.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Jagath Wickramasinghe</h5>
+                                <h5>Sanath Gunathilaka</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -499,22 +548,6 @@
                         <div class="inner">
                             <div class="info">
                                 <h5>Wasantha Mihidukulasuriya</h5>
-                                <p>Committee Member</p>
-
-                                <div class="social-links">
-                                    <a href=""><span class="fa fa-facebook"></span></a>
-                                    <a href=""><span class="fa fa-twitter"></span></a>
-                                    <a href=""><span class="fa fa-linkedin"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <image src="Images\m11.png" alt="team" />
-                        <div class="inner">
-                            <div class="info">
-                                <h5>Somasiri Sanath Julian Gunathilaka</h5>
                                 <p>Committee Member</p>
 
                                 <div class="social-links">
@@ -574,7 +607,7 @@
                         <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f"
                                 target="_blank"></a></i>
                         <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-                        <i> <a href="#" class="fab fa-pinterest -f" target="_blank"></a></i>
+                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
                         <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                                 target="_blank"></a></i>
                     </div>
