--- a/signupfoam.html
+++ b/signupfoam.html
@@ -135,17 +135,17 @@
                             <label for="author">
                                 <input type="checkbox" id="signUpForm-inputField-artistType-author" name="artistType"
                                     value="Author" />
-                                Author
+                                An Author
                             </label>
                             <label for="composer">
                                 <input type="checkbox" name="artistType" value="Composer"
                                     id="signUpForm-inputField-artistType-composer" />
-                                Composer
+                                A Composer
                             </label>
                             <label for="melody-writer">
                                 <input type="checkbox" name="artistType" value="melody-writer"
                                     id="signUpForm-inputField-artistType-melodyWriter" />
-                                Melody Writer
+                                A Melody Writer
                             </label>
 
                         </div>
@@ -166,7 +166,7 @@
                     </div>
 
                     <div class="inputfield">
-                        <label>Please send us a brief Description about your self</label>
+                        <label>Please give a brief description about your self</label>
                         <textarea type="text" class="input report-AddDetails" id="signUpForm-inputField-description"
                             maxlength="500"> </textarea>
                     </div>
@@ -227,7 +227,7 @@
                         <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f"
                                 target="_blank"></a></i>
                         <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-                        <i> <a href="#" class="fab fa-pinterest -f" target="_blank"></a></i>
+                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
                         <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                                 target="_blank"></a></i>
                     </div>
