--- a/members.html
+++ b/members.html
@@ -124,7 +124,7 @@
                     <h1>Artists & Writers</h1>
                     <p>
                         Why do you need We Did It Global? We are here to take
-                        responsibility for the rights, royalties and security of your music
+                        responsibility of the rights, royalties and security of your music
                     </p>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                         <i> <a href="https://www.facebook.com/wediditglobal" class="fab fa-facebook-f"
                                 target="_blank"></a></i>
                         <i><a href="https://twitter.com/wediditglobal" class="fab fa-twitter" target="_blank"></a></i>
-                        <i> <a href="#" class="fab fa-pinterest -f" target="_blank"></a></i>
+                        <i> <a href="https://www.youtube.com/c/WeDidItMusic" class="fab fa-youtube -f" target="_blank"></a></i>
                         <i> <a href="https://www.instagram.com/wediditglobal.music" class="fab fa-instagram -f"
                                 target="_blank"></a></i>
                     </div>
